--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006 -s ./public",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch",
+    "plop": "plop"
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/styles": "^5.0.0-beta.5",
+    "@types/react-input-mask": "^3.0.1",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
@@ -26,8 +30,13 @@
     "@storybook/addons": "^6.3.7",
     "@storybook/react": "^6.3.7",
     "@storybook/theming": "^6.3.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
     "@types/react": "17.0.19",
+    "babel-jest": "^27.2.0",
     "babel-loader": "^8.2.2",
+    "jest": "^27.2.0",
+    "plop": "^2.7.4",
     "typescript": "4.3.5"
   }
 }
